@@ -1,5 +1,10 @@
 2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* GBookmarkFile.xs: Don't document Glib::BookmarkFile::set_added,
+	set_modified, and set_visited as functions; they're methods.
+
+2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
 	* Glib.pm: Use an '=encoding utf8' directive for the AUTHORS POD
 	section so that non-ASCII characters are handled correctly.
 
